--- a/app.json
+++ b/app.json
@@ -24,5 +24,8 @@
     "web": {
       "favicon": "./assets/favicon.png"
     }
+  },
+  "dependencies": {
+    "@react-native-community/cli": "latest"
   }
 }
