--- a/package.json
+++ b/package.json
@@ -7,25 +7,31 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "expo build",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^2.1.0",
-    "expo": "~52.0.11",
-    "expo-image-picker": "^16.0.3",
-    "expo-location": "^18.0.3",
-    "expo-media-library": "^17.0.3",
-    "expo-sqlite": "^15.0.3",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo-file-system": "~18.0.4",
+    "expo-image-picker": "~16.0.3",
+    "expo-location": "~18.0.3",
+    "expo-media-library": "~17.0.3",
+    "expo-sqlite": "~15.0.3",
     "expo-status-bar": "~2.0.0",
     "install": "^0.13.0",
+    "metro-config": "^0.81.0",
     "npm": "^10.9.1",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-maps": "^1.20.1",
     "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2",
+    "expo": "^52.0.14",
+    "expo-cli": "^6.3.10"
   },
   "private": true,
   "keywords": [],
