--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "expo": "~52.0.14",
     "expo-file-system": "~18.0.4",
     "expo-image-picker": "~16.0.3",
     "expo-location": "~18.0.3",
@@ -25,13 +26,11 @@
     "npm": "^10.9.1",
     "react": "18.3.1",
     "react-native": "0.76.3",
-    "react-native-maps": "^1.20.1",
+    "react-native-maps": "1.18.0",
     "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "expo": "^52.0.14",
-    "expo-cli": "^6.3.10"
+    "@babel/core": "^7.25.2"
   },
   "private": true,
   "keywords": [],
